# rellog

./: Cargo.toml  README.md  std-doc.md  syntax-ideas.md
librellog/: Cargo.toml  grammar.pl
librellog/char_list/: Cargo.toml
librellog/char_list/src/: char_list.rs  chunk.rs  chunk_buf.rs  lib.rs  tests.rs
librellog/nom_indentation/: Cargo.toml
librellog/nom_indentation/src/: i9n_input.rs  lib.rs  trait_impls.rs  traits.rs
librellog/nom_indentation/tests/: test.rs
librellog/src/: ast.rs  cloning_iter.rs  data_structures.rs  dup.rs  incr.rs  interner.rs  lex.rs  lib.rs  my_nom.rs  parse.rs  rt.rs  std.rellog  tm_displayer.rs  tok.rs
librellog/src/ast/: ast.rs  dup.rs  mod.rs  partial_char_list.rs  partial_txt.rs  tm_displayer.rs  txt.rs
librellog/src/det/: mod.rs
librellog/src/intrinsics/: mod.rs
librellog/src/lex/: lex.rs  mod.rs  tests.rs  tok.rs
librellog/src/lex/snapshot_tests/: difficult.rellog  lex1.rellog  multiline_tmpl.rellog  multiline_txt.rellog  tmpl1.rellog
librellog/src/lex/snapshots/: librellog__lex__tests__tokenize@difficult.rellog.snap  librellog__lex__tests__tokenize@lex1.rellog.snap  librellog__lex__tests__tokenize@lex2.rellog.snap  librellog__lex__tests__tokenize@multiline_tmpl.rellog.snap  librellog__lex__tests__tokenize@multiline_txt.rellog.snap  librellog__lex__tests__tokenize@tmpl1.rellog.snap
librellog/src/parse/: tests.rs  txt_templates.rs  txt_tmpl.rs
librellog/src/rt/: breakpoint.rs  builtins.rs  err.rs  intrinsics.rs  kb.rs  mod.rs  rt.rs  soln_stream.rs
librellog/src/session/: mod.rs
librellog/src/std/: bootstrap.rellog  combinators.rellog  dcgs.rellog  doc_gen.rellog  elementwise.rellog  macro_bootstrap.rellog  macros.rellog  math.rellog  stacklang.rellog  std.rellog
librellog/src/utils/: deferred_iter.rs  display_unifier_set.rs  int_counter.rs  mod.rs  my_nom.rs
librellog/unifier_set/: Cargo.toml
librellog/unifier_set/src/: graph_viz.rs  lib.rs  tests.rs
nom_i9n/: Cargo.toml
nom_i9n/src/: errors.rs  i9n_input.rs  lib.rs  trait_impls.rs  traits.rs
nom_i9n/tests/: test.rs
repl/: Cargo.toml
repl/src/: app_err.rs  debugger.rs  line_editor.rs  main.rs  repl.rs
repl/src/line_editor_config/: highlighter.rs  mod.rs  prompt.rs
src/: ast.rs  (+11 more)
(+54 files in other folders)
