[package]
name = "librellog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
nom_locate = "4.0.0"
rpds = "0.12.0"
lasso = "0.6.0"
magic_static = "3.0.3"
unifier_set = { path = "./unifier_set" }
nom_i9n = { path = "./nom_indentation" }
char-list = "0.1.0"

[dev-dependencies]
assert2 = "0.3.6"
pretty_assertions = "1.2.1"
