[package]
name = "librellog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
char-list = { path = "../char-list" }
nom_locate = "4.0.0"
rpds = "0.13.0"
lasso = "0.6.0"
magic_static = "3.0.3"
unifier_set = { path = "../unifier_set" }
nom_i9n = { path = "../nom_i9n" }
nu-ansi-term = "0.46.0"
num = "0.4.1"
nom = "7.1.1"
heck = "0.4.1"

[dev-dependencies]
assert2 = "0.3.6"
insta = { version = "1.38.0", features = ["glob"] }
pretty_assertions = "1.2.1"
