[package]
name = "nom_i9n"
version = "0.1.0"
edition = "2021"
description = "`nom` combinators for indentation (i9n) sensitive parsing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
nom_locate = "4.0.0"
rpds = "0.12.0"